--- a/6.4 Motivation Meme Project/style.css
+++ b/6.4 Motivation Meme Project/style.css
@@ -1,4 +1,4 @@
-html{
+/* html{
     background:black
 }
 
@@ -12,6 +12,7 @@ img{
 h1{
     color:white;
     background:black;
+    text-transform:uppercase;
     font-family: 'Libre Baskerville', serif;
     margin: 0px 0px 0px 50px
 }
@@ -24,4 +25,30 @@ p{
 div{
     margin-top: 150px;
     margin-left: 400px;
-}
+} */
+
+html {
+    background-color: black;
+  }
+  h1 {
+    text-transform: uppercase;
+   
+   
+  }
+  
+  div{
+   
+    font-family: "Libre Baskerville", serif;
+    color:white;
+    text-align:center;
+    width:50%;
+    margin-left:25% ;
+    margin-top: 50px;
+
+  }
+  
+  img{
+    border: 5px solid white;
+    width:100%
+  }
+  
